Adding pinger exporter dashboard

--- a/apps/grafana-dashboards/kustomization.yaml
+++ b/apps/grafana-dashboards/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
     - dashboard-cluster.yaml
     - dashboard-alerter.yaml
     - dashboard-nats.yaml
+    - dashboard-pinger-exporter.yaml
