--- a/apps/grafana-dashboards/dashboard-pinger-exporter.yaml
+++ b/apps/grafana-dashboards/dashboard-pinger-exporter.yaml
@@ -27,7 +27,7 @@ data:
       "editable": true,
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
-      "id": 21,
+      "id": 32,
       "links": [],
       "panels": [
         {
@@ -272,7 +272,7 @@ data:
                 "scaleDistribution": {
                   "type": "linear"
                 },
-                "showPoints": "auto",
+                "showPoints": "never",
                 "spanNulls": false,
                 "stacking": {
                   "group": "A",
@@ -331,12 +331,105 @@ data:
           "type": "timeseries"
         },
         {
+          "datasource": {
+            "type": "prometheus",
+            "uid": "PBFA97CFB590B2093"
+          },
+          "fieldConfig": {
+            "defaults": {
+              "color": {
+                "mode": "palette-classic"
+              },
+              "custom": {
+                "axisBorderShow": false,
+                "axisCenteredZero": false,
+                "axisColorMode": "text",
+                "axisLabel": "",
+                "axisPlacement": "auto",
+                "barAlignment": 0,
+                "barWidthFactor": 0.6,
+                "drawStyle": "line",
+                "fillOpacity": 0,
+                "gradientMode": "none",
+                "hideFrom": {
+                  "legend": false,
+                  "tooltip": false,
+                  "viz": false
+                },
+                "insertNulls": false,
+                "lineInterpolation": "linear",
+                "lineWidth": 1,
+                "pointSize": 5,
+                "scaleDistribution": {
+                  "type": "linear"
+                },
+                "showPoints": "never",
+                "spanNulls": false,
+                "stacking": {
+                  "group": "A",
+                  "mode": "none"
+                },
+                "thresholdsStyle": {
+                  "mode": "off"
+                }
+              },
+              "mappings": [],
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {
+                    "color": "green",
+                    "value": null
+                  },
+                  {
+                    "color": "red",
+                    "value": 80
+                  }
+                ]
+              },
+              "unit": "ops"
+            },
+            "overrides": []
+          },
+          "gridPos": {
+            "h": 8,
+            "w": 24,
+            "x": 0,
+            "y": 14
+          },
+          "id": 15,
+          "options": {
+            "legend": {
+              "calcs": [],
+              "displayMode": "table",
+              "placement": "right",
+              "showLegend": true
+            },
+            "tooltip": {
+              "mode": "single",
+              "sort": "none"
+            }
+          },
+          "pluginVersion": "11.3.1",
+          "targets": [
+            {
+              "editorMode": "code",
+              "expr": "sum(rate(pinger_events_by_status_total{status=\"degraded\"}[5m])) by (resource, status)",
+              "legendFormat": "{{resource}}",
+              "range": true,
+              "refId": "A"
+            }
+          ],
+          "title": "Degraded events per seconds (rate) by resource",
+          "type": "timeseries"
+        },
+        {
           "collapsed": false,
           "gridPos": {
             "h": 1,
             "w": 24,
             "x": 0,
-            "y": 14
+            "y": 22
           },
           "id": 7,
           "panels": [],
@@ -376,7 +469,7 @@ data:
                 "scaleDistribution": {
                   "type": "linear"
                 },
-                "showPoints": "auto",
+                "showPoints": "never",
                 "spanNulls": false,
                 "stacking": {
                   "group": "A",
@@ -409,7 +502,7 @@ data:
             "h": 8,
             "w": 24,
             "x": 0,
-            "y": 15
+            "y": 23
           },
           "id": 8,
           "options": {
@@ -441,7 +534,7 @@ data:
             "h": 1,
             "w": 24,
             "x": 0,
-            "y": 23
+            "y": 31
           },
           "id": 9,
           "panels": [],
@@ -478,7 +571,7 @@ data:
             "h": 8,
             "w": 12,
             "x": 0,
-            "y": 24
+            "y": 32
           },
           "id": 10,
           "options": {
@@ -545,7 +638,7 @@ data:
             "h": 8,
             "w": 12,
             "x": 12,
-            "y": 24
+            "y": 32
           },
           "id": 11,
           "options": {
@@ -589,7 +682,7 @@ data:
             "h": 1,
             "w": 24,
             "x": 0,
-            "y": 32
+            "y": 40
           },
           "id": 12,
           "panels": [],
@@ -620,7 +713,7 @@ data:
             "h": 10,
             "w": 16,
             "x": 0,
-            "y": 33
+            "y": 41
           },
           "id": 13,
           "options": {
@@ -698,7 +791,7 @@ data:
             "h": 10,
             "w": 8,
             "x": 16,
-            "y": 33
+            "y": 41
           },
           "id": 14,
           "options": {
@@ -731,12 +824,12 @@ data:
         }
       ],
       "preload": false,
-      "refresh": "30s",
+      "refresh": "5s",
       "schemaVersion": 40,
       "tags": [
-        "pinger",
+        "apps",
         "latency",
-        "apps"
+        "pinger"
       ],
       "templating": {
         "list": [
@@ -778,6 +871,7 @@ data:
       },
       "timepicker": {
         "refresh_intervals": [
+          "5s",
           "10s",
           "30s",
           "1m",
@@ -789,7 +883,7 @@ data:
       },
       "timezone": "",
       "title": "Pinger Exporter — Overview",
-      "uid": "df3jy2rm94gzkb",
-      "version": 1,
+      "uid": "pinger-exporter-dashboard",
+      "version": 6,
       "weekStart": ""
     }
