--- a/apps/prometheus/app.yaml
+++ b/apps/prometheus/app.yaml
@@ -34,6 +34,12 @@ spec:
                 - targets:
                     - 'pinger-exporter.pinger-exporter.svc.cluster.local:80'
               scrape_interval: 15s
+            - job_name: 'waterSystem'
+              metrics_path: /metrics
+              static_configs:
+                - targets:
+                    - '192.168.1.10:8080'
+              scrape_interval: 15s
 
         alertmanager:
           enabled: false
