--- a/apps/prometheus/app.yaml
+++ b/apps/prometheus/app.yaml
@@ -22,24 +22,26 @@ spec:
             size: 20Gi
             storageClass: longhorn
 
-          extraScrapeConfigs:
-            - job_name: 'nats-exporter'
-              metrics_path: /metrics
-              static_configs:
-                - targets:
-                    - 'nats-exporter-prometheus-nats-exporter.monitoring.svc.cluster.local:7777'
-            - job_name: 'pinger-exporter'
-              metrics_path: /metrics
-              static_configs:
-                - targets:
-                    - 'pinger-exporter.pinger-exporter.svc.cluster.local:80'
-              scrape_interval: 15s
-            - job_name: 'waterSystem'
-              metrics_path: /metrics
-              static_configs:
-                - targets:
-                    - '192.168.1.10:8080'
-              scrape_interval: 15s
+        extraScrapeConfigs: |
+          - job_name: 'nats-exporter'
+            metrics_path: /metrics
+            static_configs:
+              - targets:
+                  - 'nats-exporter-prometheus-nats-exporter.monitoring.svc.cluster.local:7777'
+
+          - job_name: 'pinger-exporter'
+            metrics_path: /metrics
+            scrape_interval: 15s
+            static_configs:
+              - targets:
+                  - 'pinger-exporter.pinger-exporter.svc.cluster.local:80'
+
+          - job_name: 'waterSystem'
+            metrics_path: /metrics
+            scrape_interval: 15s
+            static_configs:
+              - targets:
+                  - '192.168.1.10:8080'
 
         alertmanager:
           enabled: false
