--- a/apps/grafana-dashboards/kustomization.yaml
+++ b/apps/grafana-dashboards/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
     - dashboard-alerter.yaml
     - dashboard-nats.yaml
     - dashboard-pinger-exporter.yaml
+    - dashboard-waterSystem.yaml
