--- a/apps/unifi-controller/app.yaml
+++ b/apps/unifi-controller/app.yaml
@@ -22,13 +22,13 @@ spec:
         persistence:
           enabled: true
           size: 10Gi
-          storageClassName: longhorn
+          storageClass: longhorn
 
         # si el chart separa data/backup, afegeix també això:
         backup:
           enabled: true
           size: 10Gi
-          storageClassName: longhorn
+          storageClass: longhorn
 
   syncPolicy:
     automated:
